--- a/archunit-visual/src/main/app/report/report.html
+++ b/archunit-visual/src/main/app/report/report.html
@@ -47,11 +47,10 @@
   });
 
   Promise.all([
-    visualization.createGraph(visualization.d3.select('#visualization').node()),
+    visualization.createGraph(visualization.d3.select('#visualization').node(), true),
     webComponentsInitialized
   ]).then(results => {
     const graph = results[0];
-    graph.foldAllNodes();
     graph.attachToMenu(document.querySelector('#menu'));
     graph.attachToViolationMenu(document.querySelector('#violations'));
     document.body.onresize = graph.render;
