Improved some small performance problems

--- a/archunit-visual/src/main/app/report/report.html
+++ b/archunit-visual/src/main/app/report/report.html
@@ -33,7 +33,7 @@
 </div>
 
 <!-- We use this svg to calculate text widths of rendered texts, see calculateTextWidth()-function -->
-<svg id='text-size-computation' class='node' style='display: none;'>
+<svg id='text-size-computation' class='node' visibility='hidden'>
   <text></text>
 </svg>
 
