AU-50: replaced require and module.exports by import and export in the js-code of the webcomponents and outsourced their js-code to own files

--- a/archunit-visual/src/main/app/report/menu/filter-bar.html
+++ b/archunit-visual/src/main/app/report/menu/filter-bar.html
@@ -13,32 +13,4 @@
   </div>
 </template>
 
-<script>
-  (function () {
-    const webComponents = require('web-component-infrastructure');
-    let filterStringInput;
-    let excludeInput;
-    let onChanged;
-
-    webComponents.defineCustomElement('visualization-filter-bar', class extends HTMLElement {
-      postConnected() {
-        filterStringInput = this.shadowRoot.querySelector('#filter-string');
-        excludeInput = this.shadowRoot.querySelector('#exclude');
-
-        const onValueChanged = (() => {
-          let timer = 0;
-          return () => {
-            clearTimeout(timer);
-            timer = setTimeout(() => onChanged(filterStringInput.value, excludeInput.checked), 500);
-          }
-        })();
-        filterStringInput.oninput = onValueChanged;
-        excludeInput.onclick = onValueChanged;
-      }
-
-      onChanged(newOnChanged) {
-        onChanged = newOnChanged;
-      }
-    });
-  }());
-</script>
+<script src="/filter-bar.js"></script>
