--- a/archunit-visual/src/main/app/report/menu/filter.html
+++ b/archunit-visual/src/main/app/report/menu/filter.html
@@ -51,43 +51,4 @@
   </div>
 </template>
 
-<script>
-  const checkBoxesFrom = function (nodes) {
-    const checkBoxes = Array.from(nodes);
-    const checkboxIdToCheckedBoolean = () => checkBoxes.reduce((result, box) => {
-      result[box.id] = box.checked;
-      return result;
-    }, {});
-
-    return {
-      onCheckboxClicked: onClicked => {
-        checkBoxes.forEach(box => {
-          box.onclick = () => onClicked(checkboxIdToCheckedBoolean())
-        });
-
-        onClicked(checkboxIdToCheckedBoolean()); // Sync the initial state
-      }
-    };
-  };
-
-  (function () {
-    const webComponents = require('web-component-infrastructure');
-    let nodeCheckBoxes;
-    let dependencyCheckBoxes;
-
-    webComponents.defineCustomElement('visualization-filter', class extends HTMLElement {
-      postConnected() {
-        nodeCheckBoxes = checkBoxesFrom(this.shadowRoot.querySelectorAll('.nodeCheckBox'));
-        dependencyCheckBoxes = checkBoxesFrom(this.shadowRoot.querySelectorAll('.dependencyCheckBox'));
-      }
-
-      onNodeTypeFilterChanged(onChanged) {
-        nodeCheckBoxes.onCheckboxClicked(onChanged);
-      }
-
-      onDependencyFilterChanged(onDependencyFilterChanged) {
-        dependencyCheckBoxes.onCheckboxClicked(onDependencyFilterChanged);
-      }
-    });
-  }());
-</script>
+<script src="./filter.js"></script>
