--- a/archunit-visual/src/main/app/report/menu/menu.html
+++ b/archunit-visual/src/main/app/report/menu/menu.html
@@ -35,40 +35,4 @@
   </div>
 </template>
 
-<script>
-  (function () {
-    const webComponents = require('web-component-infrastructure');
-
-    webComponents.defineCustomElement('visualization-menu', class extends HTMLElement {
-      initializeSettings(settingsInit) {
-        this.shadowRoot.querySelector('#settings-menu').initialize(settingsInit);
-        return this;
-      }
-
-      onSettingsChanged(onChanged) {
-        this.shadowRoot.querySelector('#settings-menu').onSettingsChanged(onChanged);
-        return this;
-      }
-
-      onNodeTypeFilterChanged(onChanged) {
-        this.shadowRoot.querySelector('#filter-menu').onNodeTypeFilterChanged(onChanged);
-        return this;
-      }
-
-      onDependencyFilterChanged(onChanged) {
-        this.shadowRoot.querySelector('#filter-menu').onDependencyFilterChanged(onChanged);
-        return this;
-      }
-
-      onNodeNameFilterChanged(onChanged) {
-        this.shadowRoot.querySelector('#filter-bar').onChanged(onChanged);
-        return this;
-      }
-
-      initializeLegend(legendStyles) {
-        this.shadowRoot.querySelector('#legend-menu').initialize(legendStyles);
-        return this;
-      }
-    });
-  }());
-</script>
+<script src="/menu.js"></script>
