AU-50: changed all absolute file-paths in the html-files to relative paths

--- a/archunit-visual/src/main/app/report/report.html
+++ b/archunit-visual/src/main/app/report/report.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>Visualization</title>
-  <link rel='stylesheet' href='styless.css'>
+  <link rel='stylesheet' href='styles.css'>
 
   <script src='webcomponents-loader.js'></script>
   <script src='web-component-infrastructure.js'></script>
