AU-50: replaced the own htmlInliner by the polymer-bundler

--- a/archunit-visual/src/main/app/report/menu/filter-bar.html
+++ b/archunit-visual/src/main/app/report/menu/filter-bar.html
@@ -1,5 +1,5 @@
 <template id="visualization-filter-bar-template">
-  <link rel="stylesheet" href="filter-bar.css">
+  <link rel="stylesheet" href="menu/filter-bar.css">
 
   <div id="filter-bar-root">
     <div class="search-bar">
@@ -13,4 +13,4 @@
   </div>
 </template>
 
-<script src="filter-bar.js"></script>
+<script src="build://filter-bar.js"></script>
