--- a/archunit-visual/src/main/app/report/menu/filter.html
+++ b/archunit-visual/src/main/app/report/menu/filter.html
@@ -1,5 +1,5 @@
 <template id="visualization-filter-template">
-  <link rel="stylesheet" href="filter.css">
+  <link rel="stylesheet" href="menu/filter.css">
 
   <div id="filter-root">
     <div class="filter-group-panel">
@@ -51,4 +51,4 @@
   </div>
 </template>
 
-<script src="filter.js"></script>
+<script src="build://filter.js"></script>
