--- a/archunit-visual/src/main/app/report/menu/legend.html
+++ b/archunit-visual/src/main/app/report/menu/legend.html
@@ -1,5 +1,5 @@
 <template id="visualization-legend-template">
-  <link rel="stylesheet" href="legend.css">
+  <link rel="stylesheet" href="menu/legend.css">
 
   <div id="wrapper">
     <svg id="legendContainer">
@@ -7,4 +7,4 @@
   </div>
 </template>
 
-<script src="legend.js"></script>
+<script src="build://legend.js"></script>
