--- a/archunit-visual/src/main/app/report/menu/menu.html
+++ b/archunit-visual/src/main/app/report/menu/menu.html
@@ -4,7 +4,7 @@
 <link rel="import" href="filter-bar.html">
 
 <template id="visualization-menu-template">
-  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="menu/menu.css">
   <div id="bar-root">
     <div id='filter-entry' class="bar-entry">
       <visualization-filter-bar id="filter-bar"></visualization-filter-bar>
@@ -35,4 +35,4 @@
   </div>
 </template>
 
-<script src="menu.js"></script>
+<script src="build://menu.js"></script>
