--- a/archunit-visual/src/main/app/report/menu/settings.html
+++ b/archunit-visual/src/main/app/report/menu/settings.html
@@ -1,5 +1,5 @@
 <template id="visualization-settings-template">
-  <link rel="stylesheet" href="settings.css">
+  <link rel="stylesheet" href="menu/settings.css">
 
   <div id="settings-root">
     <div class="settings-panel">
@@ -15,4 +15,4 @@
   </div>
 </template>
 
-<script src="settings.js"></script>
+<script src="build://settings.js"></script>
