--- a/archunit-visual/src/main/app/report/report.html
+++ b/archunit-visual/src/main/app/report/report.html
@@ -5,12 +5,12 @@
   <title>Visualization</title>
   <link rel='stylesheet' href='styles.css'>
 
-  <script src='webcomponents-loader.js'></script>
-  <script src='web-component-infrastructure.js'></script>
-  <script src='d3.js'></script>
+  <script src='build://webcomponents-loader.js'></script>
+  <script src='build://web-component-infrastructure.js'></script>
+  <script src='build://d3.js'></script>
 
-  <link rel='import' href='menu.html'>
-  <link rel='import' href='violation-menu.html'>
+  <link rel='import' href='menu/menu.html'>
+  <link rel='import' href='violation-menu/violation-menu.html'>
 </head>
 <body>
 
@@ -37,7 +37,7 @@
   <text></text>
 </svg>
 
-<script src='report-bundle.js'></script>
+<script src='build://report-bundle.js'></script>
 
 </body>
 </html>
