--- a/archunit-visual/src/main/app/report/violation-menu/violation-menu.html
+++ b/archunit-visual/src/main/app/report/violation-menu/violation-menu.html
@@ -1,5 +1,5 @@
 <template id="violation-menu-template">
-  <link rel="stylesheet" href="violation-menu.css">
+  <link rel="stylesheet" href="violation-menu/violation-menu.css">
   <div id="bar-root">
     <div id="showbar" class="show-bar"><</div>
     <div id="verticalDivider">
@@ -13,4 +13,4 @@
   </div>
 </template>
 
-<script src="violation-menu.js"></script>
+<script src="build://violation-menu.js"></script>
