--- a/archunit-visual/src/main/app/report/report.html
+++ b/archunit-visual/src/main/app/report/report.html
@@ -5,6 +5,11 @@
   <title>Visualization</title>
   <link rel='stylesheet' href='styles.css'>
 
+  <script>
+    window.jsonRoot = 'injectJsonClassesToVisualizeHere';
+    window.jsonViolations = 'injectJsonViolationsToVisualizeHere';
+  </script>
+
   <script src='build://webcomponents-loader.js'></script>
   <script src='build://web-component-infrastructure.js'></script>
   <script src='build://d3.js'></script>
