--- a/archunit-visual/src/main/app/report/report.html
+++ b/archunit-visual/src/main/app/report/report.html
@@ -25,7 +25,8 @@
   <div id='container'>
     <svg id='visualization'>
       <defs>
-        <marker id="end_arrow" viewBox="0 -5 10 10" refX="10" markerUnits="userSpaceOnUse" markerWidth="10" markerHeight="10" orient="auto">
+        <marker id="end_arrow" viewBox="0 -5 10 10" refX="10" markerUnits="userSpaceOnUse" markerWidth="10"
+                markerHeight="10" orient="auto">
           <path d="M0,-5L10,0L0,5"></path>
         </marker>
       </defs>
