Changed text of the button in the violation-menu

--- a/archunit-visual/src/main/app/report/violation-menu/violation-menu.html
+++ b/archunit-visual/src/main/app/report/violation-menu/violation-menu.html
@@ -7,7 +7,7 @@
       <div class="violation-rule-list verticalDivider"></div>
       <div class="verticalDivider group">
         <div>
-          <button id="changeFoldStatesToShowAllViolations">change fold-states to show all violations</button>
+          <button id="changeFoldStatesToShowAllViolations">open selected violations</button>
         </div>
         <div id="hideAllDepsWhenRuleSelectedSetting">
           <input type="checkbox" class="checkbox" id="hideAllDepsWhenRuleSelected" checked>
