Finished the option for hiding all nodes that are not involved in violations and created tests for it

--- a/archunit-visual/src/main/app/report/violation-menu/violation-menu.html
+++ b/archunit-visual/src/main/app/report/violation-menu/violation-menu.html
@@ -15,9 +15,14 @@
             fold other nodes
           </button>
         </div>
-        <div id="hideAllDepsWhenRuleSelectedSetting">
+        <div>
           <input type="checkbox" class="checkbox" id="hideAllDepsWhenRuleSelected" checked>
           <label for="hideAllDepsWhenRuleSelected">hide all other dependencies when rule selected</label>
+        </div>
+        <div>
+          <input type="checkbox" class="checkbox" id="hideNodesWithoutViolationsWhenRuleSelected" checked>
+          <label for="hideNodesWithoutViolationsWhenRuleSelected">hide nodes without violations when rule
+            selected</label>
         </div>
       </div>
     </div>
